crates/ruff_db/src/diagnostic/render/snapshots/ruff_db__diagnostic__render__rdjson__tests__syntax_errors.snap
---
source: crates/ruff_db/src/diagnostic/render/rdjson.rs
expression: env.render_diagnostics(&diagnostics)
---
{
  "diagnostics": [
    {
      "code": {
        "url": "https://docs.astral.sh/ruff",
        "value": "invalid-syntax"
      },
      "location": {
        "path": "syntax_errors.py",
        "range": {
          "end": {
            "column": 1,
            "line": 2
          },
          "start": {
            "column": 15,
            "line": 1
          }
        }
      },
      "message": "SyntaxError: Expected one or more symbol names after import"
    },
    {
      "code": {
        "url": "https://docs.astral.sh/ruff",
        "value": "invalid-syntax"
      },
      "location": {
        "path": "syntax_errors.py",
        "range": {
          "end": {
            "column": 1,
            "line": 4
          },
          "start": {
            "column": 12,
            "line": 3
          }
        }
      },
      "message": "SyntaxError: Expected ')', found newline"
    }
  ],
  "severity": "warning",
  "source": {
    "name": "ruff",
    "url": "https://docs.astral.sh/ruff"
  }
}
